# ChibiHash-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: bench.rs  bench_v2.rs  rust_vs_c.rs
csrc/: chibihash.c  chibihash.h  chibihash_v2.c
src/: lib.rs  main.rs
src/v1/: mod.rs
src/v2/: mod.rs
tests/: hash_tests.rs  integration.rs  streaming_tests.rs
