[package]
name = "chibihash"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ville Vesilehto <ville@vesilehto.fi>"]
description = "A Rust implementation of the ChibiHash algorithm"
repository = "https://github.com/thevilledev/ChibiHash-rs"
documentation = "https://docs.rs/chibihash"
keywords = ["hash", "chibi", "fast-hash", "non-cryptographic"]
categories = ["algorithms"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1.2.1"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "rust_vs_c"
harness = false
