[package]
name = "chibihash"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["Ville Vesilehto <ville@vesilehto.fi>"]
description = "Rust implementation of the ChibiHash hash function"
repository = "https://github.com/thevilledev/ChibiHash-rs"
documentation = "https://docs.rs/chibihash"
keywords = ["hash", "chibihash", "fast-hash", "non-cryptographic"]
categories = ["algorithms", "no-std"]

[dependencies.hashbrown]
version = "0.16.1"
default-features = false
optional = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
cc = { version = "1.2.1", optional = true }

[features]
ffi = ["cc"]
default = ["std"]
std = []
hashbrown = ["dep:hashbrown"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench_v2"
harness = false

[[bench]]
name = "rust_vs_c"
harness = false
